# protei_practice

./: README.md
hw2/: .gitignore  CMakeLists.txt  README.md
hw2/source/: FileHandler.cpp  FileHandler.h  main.cpp
hw2/tests/: TestFileHandler.cpp
hw4/: CMakeLists.txt  run_profiler.sh
hw4/source/: main.cpp  upgraded_multiply.h
hw5/: CMakeLists.txt  README.md
hw5/client/: ConnectionsHandler.h  ExprGenerator.h  client.cmake  main.cpp
hw5/client/utility/: random_int.h
hw5/server/: Calculator.h  ConnectionsHandler.h  main.cpp  server.cmake
hw8/: get_proc_info.bash
